; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/ppc/extr_swscale_ppc_template.c_yuv2planeX_u.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/ppc/extr_swscale_ppc_template.c_yuv2planeX_u.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**, i32*, i32, i32*, i32, i32)* @yuv2planeX_u to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @yuv2planeX_u(i32* %0, i32 %1, i32** %2, i32* %3, i32 %4, i32* %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32**, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32** %2, i32*** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %20 = load i32, i32* %16, align 4
  store i32 %20, i32* %17, align 4
  br label %21

21:                                               ; preds = %68, %8
  %22 = load i32, i32* %17, align 4
  %23 = load i32, i32* %13, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %71

25:                                               ; preds = %21
  %26 = load i32*, i32** %14, align 8
  %27 = load i32, i32* %17, align 4
  %28 = load i32, i32* %15, align 4
  %29 = add nsw i32 %27, %28
  %30 = and i32 %29, 7
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %26, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = shl i32 %33, 12
  store i32 %34, i32* %19, align 4
  store i32 0, i32* %18, align 4
  br label %35

35:                                               ; preds = %57, %25
  %36 = load i32, i32* %18, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %60

39:                                               ; preds = %35
  %40 = load i32**, i32*** %11, align 8
  %41 = load i32, i32* %18, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32*, i32** %40, i64 %42
  %44 = load i32*, i32** %43, align 8
  %45 = load i32, i32* %17, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  %48 = load i32, i32* %47, align 4
  %49 = load i32*, i32** %9, align 8
  %50 = load i32, i32* %18, align 4
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds i32, i32* %49, i64 %51
  %53 = load i32, i32* %52, align 4
  %54 = mul nsw i32 %48, %53
  %55 = load i32, i32* %19, align 4
  %56 = add nsw i32 %55, %54
  store i32 %56, i32* %19, align 4
  br label %57

57:                                               ; preds = %39
  %58 = load i32, i32* %18, align 4
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %18, align 4
  br label %35

60:                                               ; preds = %35
  %61 = load i32, i32* %19, align 4
  %62 = ashr i32 %61, 19
  %63 = call i32 @av_clip_uint8(i32 %62)
  %64 = load i32*, i32** %12, align 8
  %65 = load i32, i32* %17, align 4
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds i32, i32* %64, i64 %66
  store i32 %63, i32* %67, align 4
  br label %68

68:                                               ; preds = %60
  %69 = load i32, i32* %17, align 4
  %70 = add nsw i32 %69, 1
  store i32 %70, i32* %17, align 4
  br label %21

71:                                               ; preds = %21
  ret void
}

declare dso_local i32 @av_clip_uint8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
